0.03
 [Common]
 - Add minimal version of Perl.
 - Update Module::Install to 1.14 version.
 - Update LICENSE AND COPYRIGHT section in doc to my standard (bsd-2).

 [Tags::Output::Raw]
 - Fix SYNOPSIS in Tags::Output::Raw doc.

0.02 2014-10-17T07:37:27+02:00
 - Fix test dependencies.

0.01 2014-10-13T13:33:17+02:00
 - First version.