@@ -11,13 +11,14 @@ use Test::More 'tests' => 3;
 eval {
 	Tags::Utils::Preserve->new('');
 };
-is($EVAL_ERROR, "Unknown parameter ''.\n");
+is($EVAL_ERROR, "Unknown parameter ''.\n", "Unknown parameter ''.");
 
 # Test.
 eval {
 	Tags::Utils::Preserve->new('something' => 'value');
 };
-is($EVAL_ERROR, "Unknown parameter 'something'.\n");
+is($EVAL_ERROR, "Unknown parameter 'something'.\n",
+	"Unknown parameter 'something'.");
 
 # Test.
 my $obj = Tags::Utils::Preserve->new;
